@@ -114,7 +114,7 @@ public class ConfirmBookDelete extends BasePage
 	{
 		return new IDirectListener()
 		{
-			public void directTriggered(IComponent component, String[] context, IRequestCycle cycle)
+			public void directTriggered(IDirect direct, String[] context, IRequestCycle cycle)
 			{
 				Integer bookPK;
 				
